# gpt-teacher-db

./: .applied  .env-sample  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: b4324e94088b_create_first_models_to_bootstrap.py  c22a273ef977_fix_name_password_hash.py  e5aa504ee92f_bootstrap_db.py
scripts/: make_migrations.sh
src/gpt_teacher_db/: __init__.py
src/gpt_teacher_db/core/: __init__.py  constants.py
src/gpt_teacher_db/gpt_teacher/: __init__.py  metadata.py
src/gpt_teacher_db/gpt_teacher/core/: __init__.py  base_model_json_conversor.py  validators.py
src/gpt_teacher_db/gpt_teacher/dto/: __init__.py  consolidated_data.py
src/gpt_teacher_db/gpt_teacher/enum/: __init__.py  message_type.py  session_status.py
src/gpt_teacher_db/gpt_teacher/models/: __init__.py  chat_message.py  classroom.py  classroom_student.py  consolidated.py  example_model.py  message.py  problem.py  session.py  student.py  student_session.py  teacher.py
tests/: conftest.py
